opravená verze